fix header alignment

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header{
       align-items: center;
 	padding:30px 50px;
 	margin-top:140px;
-	width:70%;
+    width: calc(70% - 32px);
 	max-width:900px;
 	border-left: 2px solid #13FAC5;
 	border-bottom: 2px solid #14C2F7;
